# ydownloader

./: README.md  download.py  pyproject.toml
src/ydownloader/: __init__.py  __main__.py  cli.py  config.py  downloader.py  tui.py
