[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ydownloader"
version = "2.0.0"
description = "A modern YouTube downloader with CLI and interactive TUI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    { name = "Artur Papyan" }
]
keywords = ["youtube", "download", "video", "audio", "yt-dlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "yt-dlp>=2024.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
ydownloader = "ydownloader.cli:main"

[project.urls]
Homepage = "https://github.com/arturpapyan/ydownloader"
Repository = "https://github.com/arturpapyan/ydownloader"

[tool.hatch.build.targets.wheel]
packages = ["src/ydownloader"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]
